# Book-Catalog

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
catalog_app/: manage.py
catalog_app/catalog/: admin.py  fields.py  models.py  paginators.py  serializers.py  urls.py  utils.py  views.py
catalog_app/catalog/management/commands/: parse_books.py
catalog_app/catalog/migrations/: 0001_initial.py
catalog_app/catalog_app/: asgi.py  settings.py  urls.py  wsgi.py
catalog_app/feedback/: admin.py  models.py  serializers.py  urls.py  views.py
catalog_app/feedback/migrations/: 0001_initial.py
catalog_app/users/: models.py  serializers.py  urls.py  views.py
catalog_app/users/migrations/: 0001_initial.py
